--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": "^0.0.0"
   },
   "devDependencies": {
+    "antd": "^2.13.9",
     "antd-mobile": "^1.6.8",
     "antd-mobile-web": "^1.5.0",
     "babel-core": "^6.21.0",
