--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "node": "^0.0.0"
   },
   "devDependencies": {
-    "antd": "^2.13.9",
+    "antd": "^2.13.10",
     "antd-mobile": "^1.6.8",
     "antd-mobile-web": "^1.5.0",
     "babel-core": "^6.21.0",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^6.2.10",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.5.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.4",
+    "eslint-config-alloy": "^1.3.1",
+    "eslint-plugin-react": "^7.4.0",
     "file-loader": "^0.10.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "react": "^15.6.2",
+    "react-css-modules": "^4.7.1",
     "react-dom": "^15.6.2",
     "react-pullload": "^1.0.7",
     "react-redux": "^5.0.6",
@@ -39,6 +43,7 @@
   },
   "scripts": {
     "start": "webpack",
+    "test": "jasmine test/*.test.js",
     "dev": "webpack-dev-server --hot --host 0.0.0.0",
     "dist": "webpack --progress --profile --colors --config webpack.production.config.js"
   },
