--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-alloy": "^1.3.1",
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^0.10.1",
+    "jest": "^21.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "react": "^15.6.2",
