--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "css-loader": "^0.26.4",
     "eslint-config-alloy": "^1.3.1",
     "eslint-plugin-react": "^7.4.0",
+    "fetch-mock": "^5.13.1",
     "file-loader": "^0.10.1",
     "jest": "^21.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "mock": "^0.1.1",
+    "mockjs": "^1.0.1-beta3",
     "react": "^15.6.2",
     "react-css-modules": "^4.7.1",
     "react-dom": "^15.6.2",
