--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "scripts": {
     "start": "webpack",
-    "test": "jasmine test/*.test.js",
+    "test": "jest",
     "dev": "webpack-dev-server --hot --host 0.0.0.0",
     "dist": "webpack --progress --profile --colors --config webpack.production.config.js"
   },
