--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "react": "^15.6.2",
     "react-css-modules": "^4.7.1",
     "react-dom": "^15.6.2",
+    "react-image-gallery": "^0.8.6",
     "react-pullload": "^1.0.7",
     "react-redux": "^5.0.6",
+    "react-responsive-carousel": "^3.1.30",
     "react-router": "^3.2.0",
+    "react-swipeable": "^4.2.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
