--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sass-loader": "^6.0.3",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
+    "video.js": "^6.6.0",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.2"
   },
